[misc] benchmark correction for java 23+